Fix the wrong wake lock type in devtools

Mistakenly used the wrong wake lock type when converting devtools to be the
client of WakeLock mojo service.

BUG=726290

Change-Id: I38e824294b8e42a4cd959518c2e49a5acb773c03
Reviewed-on: https://chromium-review.googlesource.com/516827
Reviewed-by: Dmitry Gozman <dgozman@chromium.org>
Commit-Queue: Ke He <ke.he@intel.com>
Cr-Commit-Position: refs/heads/master@{#475228}
Former-commit-id: dd2fa336d116912de565aa11f9b916341be3d579